--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,50 +25,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 234,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Win 3 games out of 5 to win the game!\n",
+      "Paper, Scissors, Stone? paper, you asshole\n",
+      "Paper, Scissors, Stone? paper\n",
+      "Master gets a point.\n",
+      "You: paper VS Master: Scissors\n",
+      "Your points: 0 | Master's points:  1\n",
+      "Paper, Scissors, Stone? paper\n",
+      "You gets a point.\n",
+      "You: paper VS Master: Paper\n",
+      "Your points: 1 | Master's points:  1\n",
+      "Paper, Scissors, Stone? scissors\n",
+      "You gets a point.\n",
+      "You: scissors VS Master: Paper\n",
+      "Your points: 2 | Master's points:  1\n",
+      "Paper, Scissors, Stone? stone\n",
+      "You gets a point.\n",
+      "You: stone VS Master: Scissors\n",
+      "Your points: 3 | Master's points:  1\n",
+      "Paper, Scissors, Stone? stone\n",
+      "You gets a point.\n",
+      "You: stone VS Master: Scissors\n",
+      "Your points: 4 | Master's points:  1\n",
+      "You win!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
+    "import random\n",
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
+    "options=[\"Stone\",\"Paper\",\"Scissors\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
+    "max_game = 5\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
+    "win = 3\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
     "\n",
+    "def random_options(options):\n",
+    "    return random.choice(options)\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
+    "     \n",
+    "def your_choice():\n",
+    "    Enter=\"\"\n",
+    "    while Enter==False or Enter.upper()!=\"PAPER\" and Enter.upper()!=\"SCISSORS\" and Enter.upper()!=\"STONE\":\n",
+    "        Enter=input(\"Paper, Scissors, Stone? \")\n",
+    "    return Enter\n",
+    "        \n",
+    "    \n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
+    "\n",
     "\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "\n",
+    "def combat(computer,player):\n",
+    "    if computer==player:\n",
+    "        return 0\n",
+    "    elif (computer.upper()==\"PAPER\" and player.upper()==\"STONE\"):\n",
+    "        return 1\n",
+    "    elif (computer.upper()==\"SCISSORS\" and player.upper()==\"PAPER\"):\n",
+    "        return 1  \n",
+    "    elif (computer.upper()==\"STONE\" and player.upper()==\"SCISSORS\"):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
     "\n",
+    "def state(player,computer,result,player_win,computer_win):\n",
+    "    print(\"You:\",player,\"VS Master:\",computer)\n",
+    "    if result==1 or result==2:\n",
+    "        print(\"Your points:\",player_win,\"| Master's points: \",computer_win)\n",
+    "\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "computer_win=0\n",
+    "player_win=0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
+    "count=0\n",
+    "\n",
+    "print(\"Win 3 games out of 5 to win the game!\")\n",
+    "\n",
+    "for i in range(max_game):\n",
+    "    computer=random_options(options)\n",
+    "    player=your_choice()\n",
+    "    result=combat(computer,player)\n",
+    "    if result==1:\n",
+    "        computer_win+=1\n",
+    "        print(\"Master gets a point.\")\n",
+    "    elif result==2:\n",
+    "        player_win+=1\n",
+    "        print(\"You get a point.\")\n",
+    "    else:\n",
+    "        print(\"Tie!\")\n",
+    "    state(player,computer,result,player_win,computer_win)\n",
     "\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "  \n",
+    "if player_win>=win:\n",
+    "    print(\"You win! :-)\")\n",
+    "else:\n",
+    "    print(\"You lose!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -93,59 +215,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 277,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of games (Must be ODD number):asdfjk\n",
+      "Enter the number of games (Must be ODD number):5\n",
+      "Get  3  points to win the game!\n",
+      "Paper, Scissors, Stone, Lizard, Spock? spock\n",
+      "Tie!\n",
+      "You: spock VS Master: Spock\n",
+      "Your points: 0 | Master's points:  0\n",
+      "Paper, Scissors, Stone, Lizard, Spock? spock\n",
+      "Tie!\n",
+      "You: spock VS Master: Spock\n",
+      "Your points: 0 | Master's points:  0\n",
+      "Paper, Scissors, Stone, Lizard, Spock? spock\n",
+      "Master gets a point.\n",
+      "You: spock VS Master: Paper\n",
+      "Your points: 0 | Master's points:  1\n",
+      "Paper, Scissors, Stone, Lizard, Spock? lizard\n",
+      "Master gets a point.\n",
+      "You: lizard VS Master: Scissors\n",
+      "Your points: 0 | Master's points:  2\n",
+      "Paper, Scissors, Stone, Lizard, Spock? stone\n",
+      "Tie!\n",
+      "You: stone VS Master: Stone\n",
+      "Your points: 0 | Master's points:  2\n",
+      "You lose!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
-    "\n",
+    "import random\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
     "\n",
+    "def max_games():\n",
+    "    odd=\"\"\n",
+    "    check_int=False\n",
+    "    while odd==False or check_int==False or int(odd)%2!=1:\n",
+    "        odd=input(\"Enter the number of games (Must be ODD number):\")\n",
+    "        try:\n",
+    "            val = int(odd)\n",
+    "            check_int=True\n",
+    "        except ValueError:\n",
+    "            check_int=False\n",
+    "        \n",
+    "    return odd\n",
     "\n",
     "# Assign a list of 5 possible options.\n",
     "\n",
+    "options=[\"Stone\",\"Paper\",\"Scissors\",\"Lizard\",\"Spock\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
     "\n",
+    "num_games=max_games()\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
     "\n",
+    "win=round(int(num_games)*2/3)\n",
     "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
     "\n",
+    "def random_options(options):\n",
+    "    return random.choice(options)\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
     "\n",
     "\n",
+    "def your_choice():\n",
+    "    Enter=\"\"\n",
+    "    while Enter==False or Enter.upper()!=\"STONE\" and Enter.upper()!=\"PAPER\" and Enter.upper()!=\"SCISSORS\" and Enter.upper()!=\"LIZARD\" and Enter.upper()!=\"SPOCK\":\n",
+    "        Enter=input(\"Paper, Scissors, Stone, Lizard, Spock? \")\n",
+    "    return Enter\n",
+    "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
     " \n",
-    "\n",
+    "def combat(computer,player):\n",
+    "    if computer.upper()==player.upper():\n",
+    "        return 0\n",
+    "    elif (computer.upper()==\"PAPER\" or \"SPORK\" and player.upper()==\"STONE\"):\n",
+    "        return 1\n",
+    "    elif (computer.upper()==\"SCISSORS\" or \"LIZARD\" and player.upper()==\"PAPER\"):\n",
+    "        return 1  \n",
+    "    elif (computer.upper()==\"STONE\" or \"SPORK\" and player.upper()==\"SCISSORS\"):\n",
+    "        return 1\n",
+    "    elif (computer.upper()==\"SCISSORS\" or \"STONE\" and player.upper()==\"LIZARD\"):\n",
+    "        return 1  \n",
+    "    elif (computer.upper()==\"PAPER\" or \"LIZARD\" and player.upper()==\"SPORK\"):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "    \n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
     "\n",
+    "def state(player,computer,result,player_win,computer_win):\n",
+    "    print(\"You:\",player,\"VS Master:\",computer)\n",
+    "    print(\"Your points:\",player_win,\"| Master's points: \",computer_win)\n",
+    "\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
+    "\n",
+    "computer_win=0\n",
+    "player_win=0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
+    "print(\"Get \",win,\" points to win the game!\")\n",
+    "\n",
+    "for i in range(int(num_games)):\n",
+    "    computer=random_options(options)\n",
+    "    player=your_choice()\n",
+    "    result=combat(computer,player)\n",
+    "    if result==1:\n",
+    "        computer_win+=1\n",
+    "        print(\"Master gets a point.\")\n",
+    "    elif result==2:\n",
+    "        player_win+=1\n",
+    "        print(\"You gets a point.\")\n",
+    "    else:\n",
+    "        print(\"Tie!\")\n",
+    "    state(player,computer,result,player_win,computer_win)\n",
     "    \n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "\n"
+    "\n",
+    "if player_win>=win:\n",
+    "    print(\"You win!\")\n",
+    "else:\n",
+    "    print(\"You lose!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -171,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
