--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -101,33 +101,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum temperature: 0\n",
+      "Maximum temperature: 83\n",
+      "Temperatures higher than 70C: 76 C.\n",
+      "Temperatures higher than 70C: 80 C.\n",
+      "Temperatures higher than 70C: 80 C.\n",
+      "Temperatures higher than 70C: 83 C.\n",
+      "Temperatures higher than 70C: 79 C.\n",
+      "Mean temperature: 58.833333333333336\n",
+      "Temperature in F: [91.4, 150.8, 149.0, 137.9, 138.2, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 156.2, 176.0, 181.4, 154.4, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# assign a variable to the list of temperatures\n",
+    "temp_C = [33,66,65,0,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48,45,39]\n",
     "\n",
     "# 1. Calculate the minimum of the list and print the value using print()\n",
-    "\n",
+    "min_temp=(min(temp_C))\n",
+    "print(\"Minimum temperature:\", min_temp)\n",
     "\n",
     "# 2. Calculate the maximum of the list and print the value using print()\n",
-    "\n",
+    "max_temp=(max(temp_C))\n",
+    "print(\"Maximum temperature:\",max_temp)\n",
     "\n",
     "# 3. Items in the list that are greater than 70ºC and print the result\n",
-    "\n",
+    "for t in temp_C:\n",
+    "    if t>70:\n",
+    "        print(\"Temperatures higher than 70C:\", t,\"C.\")\n",
     "\n",
     "# 4. Calculate the mean temperature throughout the day and print the result\n",
-    "\n",
+    "mean_temp=sum(temp_C)/len(temp_C)\n",
+    "print(\"Mean temperature:\",mean_temp)\n",
     "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
+    "del temp_C[3]\n",
     "\n",
     "\n",
     "# 5.2 Update of the estimated value at 03:00 on the list\n",
-    "\n",
+    "temp_C.insert(3,mean_temp)\n",
     "\n",
     "\n",
     "# Bonus: convert the list of ºC to ºFarenheit\n",
-    "\n"
+    "temp_F=[]\n",
+    "for t in temp_C:\n",
+    "    temp_F.append(t*1.8+32)\n",
+    "    \n",
+    "print(\"Temperature in F:\",temp_F)"
    ]
   },
   {
@@ -144,12 +171,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
-    "\n"
+    "\n",
+    "if mean_temp>65:\n",
+    "    print(True)\n",
+    "else:\n",
+    "    count=0\n",
+    "    for t in temp_C:\n",
+    "        if t >=70:\n",
+    "            count+=1\n",
+    "        elif t>80:\n",
+    "            print(True)\n",
+    "\n",
+    "if count>4:\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)\n",
+    "            \n",
+    "    "
    ]
   },
   {
@@ -165,41 +217,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hours whose temperature >70: [9, 10, 12, 13, 15]\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "\n"
+    "temp_C = [33,66,65,0,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48,45,39]\n",
+    "\n",
+    "hours=[]\n",
+    "\n",
+    "i=0\n",
+    "while i!=len(temp_C):\n",
+    "    if temp_C[i]>70:\n",
+    "        hours.append(i)\n",
+    "    else:\n",
+    "        pass\n",
+    "    i+=1\n",
+    "\n",
+    "print(\"Hours whose temperature >70:\",hours)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
+    "\n",
+    "count=1\n",
+    "\n",
+    "for i in range(0,len(hours)-1):\n",
+    "    if hours[i+1]==hours[i]+1:\n",
+    "        count+=1\n",
+    "    else:\n",
+    "        count=1\n",
+    "        \n",
+    "if count>=4:\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)\n",
+    " \n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average of list F: average of list C: 2.322152974504249 :1\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the lists (ºC and ºF). How they relate?\n",
+    "\n",
+    "print(\"Average of list F: average of list C:\",(sum(temp_F)/len(temp_F))/(sum(temp_C)/len(temp_C)),\":1\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SD of list F: SD of list C: 1.7999999999999998 :1\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the lists. How they relate?\n",
+    "mean_C=sum(temp_C)/len(temp_C)\n",
+    "mean_F=sum(temp_F)/len(temp_F)\n",
+    "\n",
+    "stdv_C = (sum(((i-mean_C)**2) for i in temp_C)/len(temp_C))**0.5\n",
+    "stdv_F = (sum(((i-mean_F)**2) for i in temp_F)/len(temp_F))**0.5\n",
+    "\n",
+    "print(\"SD of list F: SD of list C:\", stdv_F/stdv_C ,\":1\")\n",
     "\n"
    ]
   },
@@ -227,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
