--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days= 10.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
-    "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
-    "\n",
     "# Write the code that solves the problem\n",
+    "# Print the result with print('Days =', days)\n",
+    "\n",
+    "botton= int(0)\n",
+    "snail_day= int(30)\n",
+    "snail_night= int(20)\n",
+    "path=[]\n",
+    "days=int(0)\n",
     "\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "while botton < 125:\n",
+    "\tbotton+=snail_day\n",
+    "\tpath.append(botton)\n",
+    "\tif botton > 125:\n",
+    "\t\tbreak\n",
+    "\telse:\n",
+    "\t\tbotton= botton - snail_night\n",
+    "\t\tpath.append(botton)\n",
+    "\n",
+    "\n",
+    "for i in path:\n",
+    "\tdays+=0.5\n",
+    "\n",
+    "print('Days=', days)\n"
    ]
   },
   {
@@ -75,25 +99,11 @@
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
-    "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
-    "\n",
     "# Write the code that solves the problem\n",
-    "\n",
-    "\n",
-    "\n",
     "# Print the result with print('Days =', days)\n",
-    "\n",
-    "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
-    "\n",
-    "\n",
-    "\n",
     "# What is its average progress?\n",
-    "\n",
-    "\n",
     "# What is the standard deviation of your displacement during the day?\n",
     "\n"
    ]
@@ -122,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
