--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,43 +33,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
     "\n",
     "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
-    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]"
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "tie=[]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalf_results=int(0)\n",
+    "saruman_results=int(0)\n",
+    "draw=int(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 77, 25, 73, 34, 21, 54, 56, 34, 39]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "\n",
+    "for i in range(10):\n",
+    "    if gandalf[i] < saruman[i]:\n",
+    "        saruman_results+=1\n",
+    "    elif gandalf[i] > saruman[i]:\n",
+    "        gandalf_results+=1\n",
+    "    else:\n",
+    "        draw+=1\n",
+    "\n",
+    "for i in range(10):\n",
+    "    tie.append(int(gandalf[i] + saruman[i]))\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**SCORE** \n",
+      " Saruman = 16 \n",
+      " Gandalf = 24 \n",
+      " Draw = 0 \n",
+      "**THE SUM OF POWER** \n",
+      " [33, 77, 25, 73, 34, 21, 54, 56, 34, 39] = 446 of 10 clashes\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "print(\"**SCORE** \\n\",\n",
+    "      \"Saruman =\", saruman_results,\"\\n\",\n",
+    "      \"Gandalf =\", gandalf_results,\"\\n\",\n",
+    "      \"Draw =\", draw,\"\\n\"\n",
+    "      \"**THE SUM OF POWER** \\n\", tie, \"=\", sum(tie), \"of\", len(tie), \"clashes\" )\n"
    ]
   },
   {
@@ -116,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,22 +175,22 @@
     "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
     "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Magic arrow', 'Fireball']\n",
     "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
-    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assign spell power lists to variables\n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign spell power lists to variables\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
