--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,9 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30, 10, 40, 20, 50, 30, 60, 40, 70, 50, 80, 60, 90, 70, 100, 80, 110, 90, 120, 100, 125]\n",
+      "Minimun = 10 Maximum = 125 Média = 67.86\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
@@ -104,9 +113,30 @@
     "# Print the result with print('Days =', days)\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
     "# What is its average progress?\n",
+    "\n",
+    "for index, item in enumerate(path):\n",
+    "    if item > 125:\n",
+    "        path[index] = 125\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "print(path)\n",
+    "\n",
+    "average = sum(path)/ len(path)\n",
+    "\n",
+    "print(\"Minimun =\", min(path), \"Maximum =\", max(path), \"Média =\", \"%.2f\"%(average))\n",
+    "\n",
+    "\n",
     "# What is the standard deviation of your displacement during the day?\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
