--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,7 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,17 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[33, 77, 25, 73, 34, 21, 54, 56, 34, 39]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Execution of spell clashes\n",
     "\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +96,8 @@
      "output_type": "stream",
      "text": [
       "**SCORE** \n",
-      " Saruman = 16 \n",
-      " Gandalf = 24 \n",
+      " Saruman = 4 \n",
+      " Gandalf = 6 \n",
       " Draw = 0 \n",
       "**THE SUM OF POWER** \n",
       " [33, 77, 25, 73, 34, 21, 54, 56, 34, 39] = 446 of 10 clashes\n"
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,63 +177,145 @@
     "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Magic arrow', 'Fireball']\n",
     "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
     "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "gandalf_power=[]\n",
+    "saruman_power=[]\n",
+    "\n",
+    "gandalf_results1=[]\n",
+    "saruman_results1=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Power Gandalf= [50, 40, 40, 10, 50, 10, 40, 50, 10, 50] \n",
+      " Power Saruman= [45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign spell power lists to variables\n",
+    "\n",
+    "for gandalf_magic, saruman_magic in zip(gandalf, saruman):\n",
+    "    gandalf_power.append(POWER[gandalf_magic])\n",
+    "    saruman_power.append(POWER[saruman_magic])\n",
+    "\n",
+    "print(\"Power Gandalf=\", gandalf_power,\"\\n\",\"Power Saruman=\", saruman_power)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rodadas: 10\n",
+      "Ganfald ganha 1\n",
+      "Saruman ganha 1\n",
+      "Ganfald ganha 1\n",
+      "Saruman ganha 1\n",
+      "Ganfald ganha 1\n",
+      "Saruman ganha 1\n",
+      "Ganfald ganha 1\n",
+      "Ganfald ganha 1\n",
+      "Empate\n",
+      "Ganfald ganha 1\n",
+      "Fim do Jogo: Gandalf Ganhou\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf_ganhou = int(0)\n",
+    "saruman_ganhou = int(0)\n",
+    "print(\"Rodadas:\", len(saruman_power))\n",
+    "\n",
+    "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.#\n",
+    "# Execution of spell clashes#\n",
+    "# check the winner#\n",
+    "for i in range (1):\n",
+    "    for i in range (len(saruman_power)):\n",
+    "        if gandalf_power[i] > saruman_power[i]:\n",
+    "            gandalf_ganhou+=1\n",
+    "            print(\"Ganfald ganha 1\")\n",
+    "        elif saruman_power[i] > gandalf_power[i]:\n",
+    "            saruman_ganhou+=1\n",
+    "            print(\"Saruman ganha 1\")\n",
+    "        else:\n",
+    "            print(\"Empate\")\n",
+    "    if gandalf_ganhou > 3:\n",
+    "        print(\"Fim do Jogo: Gandalf Ganhou\")\n",
+    "    elif saruman_ganhou > 3:\n",
+    "        print(\"Fim do Jogo: Saruman Ganhou\")\n",
+    "    else:\n",
+    "        print(\"Fim do Jogo: ninguém ganhou\")\n",
+    "\n",
+    "\n",
+    "                   \n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assign spell power lists to variables\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
-    "\n",
-    "\n",
-    "# Execution of spell clashes\n",
-    "\n",
-    "\n",
-    "\n",
-    "# check for 3 wins in a row\n",
-    "\n",
-    "\n",
-    "# check the winner\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3. Average of each of the spell lists.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Desvio Padrão Saruman =  15.56\n",
+      "Desvio Padrão Gandalf =  17.80\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "\n",
+    "\n",
+    "#COM MATH#\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "##Variaveis##\n",
+    "\n",
+    "soma_saruman=int(0)\n",
+    "\n",
+    "##Soma##\n",
+    "for i in saruman_power:\n",
+    "    soma_saruman+=i\n",
+    "   \n",
+    "##Media##\n",
+    "\n",
+    "media_saruman = soma_saruman/len(saruman_power)\n",
+    "\n",
+    "\n",
+    "##Variancia##\n",
+    "variancia_calc = 0\n",
+    "for i in saruman_power:\n",
+    "    variancia_calc += (((i) - media_saruman)**2)\n",
+    "    \n",
+    "\n",
+    "##Desvio Padrão##\n",
+    "\n",
+    "desvio = math.sqrt(variancia_calc/len(saruman_power))\n",
+    "print ('Desvio Padrão Saruman = ', \"%.2f\" %(desvio))\n",
+    "\n",
+    "#COM STATISTICS#\n",
+    "\n",
+    "import statistics\n",
+    "print( \"Desvio Padrão Gandalf = \", \"%.2f\" %(statistics.stdev(gandalf_power)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
